# esp32-std-example

./: Cargo.toml  README.md  sdkconfig.defaults
.cargo/: esp32c3.config.toml
examples/: imu_exp.xml  led.rs  phyphox.rs  spi.rs  web.rs  web_spi.rs  ws_server.py
src/: imu_exp.xml  main.rs
