[package]
name = "esp32-std-example"
version = "0.1.0"
authors = ["leo233 <leo233.huang@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32-std-example"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

#default = ["std", "embassy", "esp-idf-svc/native"]

#pio = ["esp-idf-svc/pio"]
#std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
#alloc = ["esp-idf-svc/alloc"]
#nightly = ["esp-idf-svc/nightly"]
#embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]


experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = "0.51"
esp32-nimble = "0.11.1"
# --- Optional Embassy Integration ---
# esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

# If you enable embassy-time-driver, you MUST also add one of:

# a) Standalone Embassy libs ( embassy-time, embassy-sync etc) with a foreign async runtime:
# embassy-time = { version = "0.4.0", features = ["generic-queue-8"] } # NOTE: any generic-queue variant will work

# b) With embassy-executor:
# embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std"] }

# NOTE: if you use embassy-time with embassy-executor you don't need the generic-queue-8 feature

# --- Temporary workaround for embassy-executor < 0.8 ---
# esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
# critical-section = { version = "1.1", features = ["std"], default-features = false }

crc32-v2 = "0.0.5"
anyhow = "1.0.99"
tokio = { version = "1.47.1", features = ["net", "rt", "time", "io-std", "io-util", "macros"] }
tokio-websockets = { version = "0.8.3", features = ["client", "fastrand", "sha1_smol"] }
futures-util = { version = "0.3.31", features = ["sink"] }
bytes = "1.10.1"
[build-dependencies]
embuild = "0.33"
